--- a/src/main/webapp/styles/header.css
+++ b/src/main/webapp/styles/header.css
@@ -11,7 +11,6 @@
 
 .header a {
     text-decoration: none;
-    color: inherit;
 }
 
 .header__brand {
@@ -20,6 +19,7 @@
 }
 
 .header__brand__text {
+    color: black;
     font-weight: 700;
     font-size: 2rem;
 }
@@ -27,4 +27,10 @@
 .nav {
     display: flex;
     align-items: center;
+    gap: 20px;
+}
+
+.nav__link {
+    font-weight: 500;
+    color: #007aff;
 }
