--- a/src/main/webapp/styles/listings.css
+++ b/src/main/webapp/styles/listings.css
@@ -1,3 +1,9 @@
+.search-bar {
+    padding-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
+
 .listings {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
